[package]
name = "winbindex_differ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.30"
futures = "0.3.30"
git2 = "0.18.3"
reqwest = "0.12.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tokio = {version = "1.37.0", features = ["full"] }
